# hook0

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .mcp.json  ANALYTICS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile.output-worker  FIFO_IMPLEMENTATION_STATUS.md  FIFO_MONITORING_QUERIES.md  FIFO_SUBSCRIPTION_SPEC.md  FIFO_USER_GUIDE.md  HEALTH_EMAILS_DIFF.md  MERGE_REQUEST.md  MERGE_REQUEST_DESCRIPTION.md  MR-233-REVIEW.md  MR_DESCRIPTION.md  MR_SUMMARY.md  MR_SUMMARY_AAD.md  MR_TITLE.txt  MR_UPDATE.md  README.md  REVIEW-FRONTEND-2026-04-07.md  SPEC.md  bench.yml  cargo_check_status.txt  cliff.toml  code_of_conduct.md  contributing.md  docker-compose.yaml  docker-compose.yml  netlify.toml  osv-scanner.toml  package-lock.json  start.sh  subscription-filtering-proposal.md  (+1 more)
acquisition/: .gitlab-ci.yml  Cargo.toml  Dockerfile
acquisition/charts/: Chart.yaml  values.yaml
acquisition/src/: google_ads.rs  lib.rs  main.rs
acquisition/tests/: integration.rs
api/: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.release  README.md  sqlx-data.json
api/.sqlx/: query-001877a1d39a872dcd4bbb51c1e098d21c50e8467ce44f4b6cfa8369c11c5d4c.json  query-00190fddca4eda9e85dbf94ef5e42c76801fb9d74dcc0202e0f5e8602fad1963.json  query-002e3e00befd06f5e20648805a76fcdf3ab76dfb618f45923c84a3ccd57e1cc0.json  query-0157b1341074def4f51b8f47bd6a2ec57036c60fdc34600b6fae8e3b9d1121e4.json  query-01ac5ed3167aae53ddfc44f2c0dbbddd1143577c9b86e2e272133428d9b30186.json  query-021af24ea69075be779f1e68307e436602540d1c33ba22bbcf806a8bfd98d1bc.json  query-02545beb9566426e1f362182e5839841c215ba37f4f080964a0e96b52a8aab55.json  query-036f1b1b78037a09b3ea36bb4b523d3eec1da79692b529269003371458a74895.json  query-0398551ff5a50b84f31e97ac42305ef3dc072e4a2a25054647ab7b7438d8bbe8.json  query-04b44cb9810bc7cb52aa6d534b0542e55001992b51910e3d654a1e2d27730196.json  query-04d5d580d0553a37fce1cc871f1c1374270d188e648ca4c4563aac567df29623.json  query-04e495f34d3f04a636e0c4f7a6c5c4c9d7291a5ffd679b21cefc3e62b20166e4.json  query-050e83790c2493770bf4c463113a7636b69ecc6df446957d7f0862d83d3b93a8.json  query-0549de29b4a6e97f3afbcfb650508e844395115d052f015dd8f89fda29ad5a3a.json  query-0585d2e3a13ce8fa6f35f347bad5bfc8860f7338709e55d5eea2f62d0a8e58a8.json  query-059a86379d9486c5307d1dbf144e3db2503d92589f7e92174ec8445669de7fc1.json  query-05bea26028be904e98c02666c49f2c51e5200bb3106bd83d1feec032e8e7178b.json  query-05cbff0464e48fd8c603b3b4910047d3c5ca0df410a6c04ff050982beb439616.json  query-05f8876d7bd3a3bee56054d6e816942c4709ce4fd9a8d3fb6ca954c4e6f831b6.json  query-06e58ff4da8c123f5ed8275804d920228776fca5cac6e46b6393a9125b061ef2.json  query-08999e308844051e8b7f0162b79c5f6467ef9a7444b48ec4fed1daca7c3ed349.json  query-09b08af54d66d4c6f817711b59ccd0b02cf314c12e9e706394ede6f463e251ae.json  query-0b18c18d1c29327b0f29423306af039f490a057527557783b48e75bb2d80c1a3.json  query-0b95c2599a9f315d5899b15033232d4c7dd5608b2960d9170e12778158726d39.json  query-0bcf29a5d093dd25c40641dff9a1e1fbd3292f50e4254af3c2a0058c3ecb0e78.json  query-0bdbd8041fda6750113c1b50c28e5b827628cf5dec94c63f666ed62a0efea60d.json  query-0c9c9100786a708db0a50b8958d3dcb0bf9cfdd0ab08d012683906b427a2d25d.json  query-0d956f456c3b4ec3c7be69c77bd7080e91e4196aeeb76a724e214333ff1f7e65.json  query-0e2d94409252f6c279fbaadc3979b58c05591b0f5c9827e8c32420bc2368b387.json  query-0e69ba378a6595147dbdeb98c40eb00fca6f5ce0a6d1cb2bda109369eb56f69a.json  query-0ecb077a7c171b1340c7570f3c8f6744f757fb4a3fd618daeb27431c215c8ead.json  query-0ed97454477bd5898fe324915444a9e055dbdbe386a8c5a53e1d3403cafde249.json  query-0f07d481926bcad94a674413f144550c236546aa66750c9a47a16c98a26214b2.json  query-0f698a28837019e85ccf175a534a1913c38f7598a747369f4408bb49f7bcdd7e.json  query-0f85ff6858462b8f481acebf3de723e4bc322e6712b140281d36795b4b63f571.json  query-0f9572bbc6f392af30270102c52097dcc4fceaba6112b78d6f2dc4b56c875776.json  query-0fc8448da5599eefb33bd0be51bfa955ddde967b391acf28fa0c104055ac586d.json  query-1083720fa3fc34eb868bc4f267a0166e4b75307a8f90bf95e2627e8169895252.json  query-123fd27cc01d02f065b7f606a37fec321e62c7250ac18bda827649f785f71775.json  query-127426682617cd6d5ab8a967fee2bd38772b2008d02a8089cfbd1164860fae9d.json  (+436 more)
api/migrations/: 20210720134539_init.down.sql  20210720134539_init.up.sql  20211114234847_add_event_dispatch_trigger.down.sql  20211114234847_add_event_dispatch_trigger.up.sql  20220224095346_add_organization_created_by.down.sql  20220224095346_add_organization_created_by.up.sql  20220527140321_remove_payload_content_type.down.sql  20220527140321_remove_payload_content_type.up.sql  20221013134343_add_subscriptions_soft_delete.down.sql  20221013134343_add_subscriptions_soft_delete.up.sql  20221027144137_fix_event_type_primary_key.down.sql  20221027144137_fix_event_type_primary_key.up.sql  20230519134651_add_quotas.down.sql  20230519134651_add_quotas.up.sql  20230525215504_add_workers.down.sql  20230525215504_add_workers.up.sql  20231029163157_add_default_workers.down.sql  20231029163157_add_default_workers.up.sql  20231110091203_fix_event_dispatch.down.sql  20231110112401_add_events_per_day_materialized_view.down.sql  20231110112401_add_events_per_day_materialized_view.up.sql  20240327010233_add_index_in_request_attempt_table.down.sql  20240327010233_add_index_in_request_attempt_table.up.sql  20240327011331_add_all_time_events_per_day_table.down.sql  20240327011331_add_all_time_events_per_day_table.up.sql  20240415112558_fix_event_dispatch.down.sql  20240415112558_fix_event_dispatch.up.sql  20240425073314_iam_v2.down.sql  20240425073314_iam_v2.up.sql  20240522104648_allow_redispatching_events.down.sql  (+100 more)
api/src/: clean_unverified_users.rs  (+47 more)
cli/: .gitignore  .gitlab-ci.yml  BUGFIXES.md  CHANGELOG.md  Cargo.toml  Dockerfile  build.rs
output-worker/: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.release  sqlx-data.json
play/: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile
protobuf/: Cargo.toml  build.rs
sentry-integration/: .gitlab-ci.yml  Cargo.toml  README.md
(+1692 files in other folders)
