[workspace]
members = [
  "api",
  "output-worker",
  "sentry-integration",
  "clients/rust",
  "clients/mcp",
  "protobuf"
]
resolver = "3"

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
# Rust 1.51 added an interesting flag for faster incremental debug builds on macOS.
# It can make debug builds up to seconds faster (depending on your use-case).
split-debuginfo = "unpacked"

[profile.dev.package.sqlx-macros]
opt-level = 3

[workspace.metadata.release]
# Only release api and output-worker (SDKs have their own versioning)
release = false
publish = false
