[package]
name = "hook0-api"
version = "0.1.0"
description = "Core REST API of Hook0 — Open-Source Webhooks as a service for SaaS"
repository = "https://gitlab.com/hook0/hook0/-/tree/master/api"
homepage = "https://www.hook0.com/"
edition = "2024"
license = "SSPL-1.0"
keywords = ["webhooks", "webhook", "webhook-server", "events", "saas"]

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-governor = { version = "0.8.0", features = ["log"] }
actix-web = "4.11.0"
anyhow = "1.0.99"
argon2 = "0.5.3"
async-recursion = "1.1.1"
base64 = "0.22.1"
biscuit-auth = { version = "6.0.0", features = ["uuid"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive", "env", "cargo", "wrap_help"] }
derive_more = { version = "2.0.1", features = ["into"] }
futures-util = "0.3.31"
governor = "0.8.1"
hook0-client = { path = "../clients/rust", version = "0.2.0", default-features = false, features = ["producer"] }
hmac = "0.12.1"
sha2 = "0.10.8"
tokio = { version = "1.42.0", features = ["full"] }
hook0-sentry-integration = { path = "../sentry-integration", version = "0.1.0" }
html2text = "0.15.3"
http-api-problem = { version = "0.57.0", features = ["actix-web"] }
http-serde = "2.1.1"
humantime = "2.2.0"
ipnetwork = "0.21.1"
lazy_static = "1.5.0"
lettre = { version = "0.11.18", default-features = false, features = ["builder", "smtp-transport", "pool", "tokio1-rustls-tls"] }
log = "0.4.27"
mrml = "5.0.0"
paperclip = { version = "0.9.5", default-features = false, features = ["actix4", "v3", "chrono", "uuid"] }
regex = "1.11.1"
reqwest = { version = "0.12.23", default-features = false, features = ["charset", "http2", "macos-system-configuration", "hickory-dns"] }
sentry-actix = "0.42.0"
serde = "1.0.219"
serde_json = "1.0.142"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "chrono", "json", "ipnetwork", "migrate"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.15"
url = "2.5.4"
uuid = { version = "1.18.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive", "unic"] }

[dev-dependencies]
test-log = { version = "0.2.18", features = ["unstable"] }

[features]
default = ["reqwest-rustls-tls-webpki-roots", "application-secret-compatibility"]
reqwest-rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots", "hook0-client/reqwest-rustls-tls-webpki-roots"]
reqwest-rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots", "hook0-client/reqwest-rustls-tls-native-roots"]
migrate-users-from-keycloak = []
application-secret-compatibility = []
