[package]
name = "hook0-api"
version = "0.1.0"
description = "Core REST API of Hook0 — Open-Source Webhooks as a service for SaaS"
repository = "https://gitlab.com/hook0/hook0/-/tree/master/api"
homepage = "https://www.hook0.com/"
edition = "2024"
authors = ["David Sferruzza <david@hook0.com>", "François-Guillaume Ribreau <fg@hook0.com>"]
license = "SSPL-1.0"
keywords = ["webhooks", "webhook", "webhook-server", "events", "saas"]

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.9"
actix-governor = "0.10.0"
actix-web = "4.12.1"
anyhow = "1.0.100"
argon2 = "0.5.3"
async-recursion = "1.1.1"
aws-sdk-s3 = { version = "1.120.0", features = ["behavior-version-latest"] }
base64 = "0.22.1"
biscuit-auth = { version = "6.0.0", features = ["uuid"] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive", "env", "cargo", "wrap_help"] }
derive_more = { version = "2.1.1", features = ["into"] }
futures-util = "0.3.31"
hook0-client = { path = "../clients/rust", version = "0.2.0", default-features = false, features = ["producer"] }
hook0-protobuf = { path = "../protobuf" }
hook0-sentry-integration = { path = "../sentry-integration", version = "0.1.0" }
html2text = "0.16.6"
http-api-problem = { version = "0.57.0", features = ["actix-web"] }
http-serde = "2.1.1"
humantime = "2.3.0"
ipnetwork = "0.21.1"
lazy_static = "1.5.0"
lettre = { version = "0.11.19", default-features = false, features = ["builder", "smtp-transport", "pool", "tokio1-rustls", "aws-lc-rs", "rustls-platform-verifier"] }
log = "0.4.29"
mrml = "5.1.0"
opentelemetry = { version = "0.31.0", default-features = false, features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["trace", "metrics", "http-proto", "zstd-http", "internal-logs", "reqwest-blocking-client", "reqwest-rustls-webpki-roots"] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = ["trace", "metrics", "rt-tokio"] }
paperclip = { version = "0.9.5", default-features = false, features = ["actix4", "v3", "chrono", "uuid"] }
pulsar = { version = "6.6.0", default-features = false, features = ["tokio-rustls-runtime"] }
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["hickory-dns", "form"] }
rustls = { version = "0.23.36", default-features = false, features = ["std", "tls12", "logging", "prefer-post-quantum"] }
sentry-actix = "0.46.1"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "macros", "uuid", "chrono", "json", "ipnetwork", "migrate"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0" }
url = "2.5.8"
uuid = { version = "1.20.0", features = ["serde", "v4", "v7"] }
validator = { version = "0.20.0", features = ["derive", "unic"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemalloc_pprof = { version = "0.8.1", features = ["symbolize"], optional = true }
pprof = { version = "0.15.0", features = ["protobuf-codec"], optional = true }
tikv-jemallocator = { version = "0.6.1", optional = true }

[dev-dependencies]
insta = { version = "1.42", features = ["json"] }
test-log = { version = "0.2.19", features = ["unstable"] }

[features]
default = ["application-secret-compatibility", "jemalloc"]
migrate-users-from-keycloak = []
application-secret-compatibility = []
jemalloc = ["dep:tikv-jemallocator"]
profiling = ["jemalloc", "tikv-jemallocator/profiling", "tikv-jemallocator/stats", "tikv-jemallocator/unprefixed_malloc_on_supported_platforms", "tikv-jemallocator/background_threads", "dep:jemalloc_pprof", "dep:pprof"]
