[package]
name = "hook0-cli"
version = "0.1.0"
edition = "2021"
license = "SSPL-1.0"
description = "CLI for Hook0 webhooks platform"
authors = ["David Sferruzza <david@hook0.com>", "François-Guillaume Ribreau <fg@hook0.com>"]
repository = "https://gitlab.com/hook0/hook0"
keywords = ["webhooks", "cli", "hook0"]
categories = ["command-line-utilities", "web-programming"]
build = "build.rs"

[build-dependencies]
heck = "0.5"
reqwest = { version = "0.13", features = ["blocking", "rustls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
anyhow = "1.0"
atty = "0.2"
axum = { version = "0.8", optional = true }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.6"
comfy-table = "7.2"
console = "0.16"
crossterm = { version = "0.29", features = ["event-stream"], optional = true }
dialoguer = "0.12"
dirs = "6.0"
futures-util = "0.3"
indicatif = "0.18"
keyring = { version = "3.6" }
portpicker = { version = "0.1", optional = true }
rand = "0.10"
ratatui = { version = "0.30", optional = true }
reqwest = { version = "0.13", features = ["hickory-dns", "json", "query"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.51", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.23", features = ["v4", "serde"] }

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm", "dep:axum", "dep:portpicker"]

[dev-dependencies]
assert_cmd = "2.2"
axum = { version = "0.8", features = ["macros"] }
clap-markdown = "0.1.5"
hook0-play = { path = "../play" }
portpicker = "0.1"
predicates = "3.1"
tempfile = "3.27"
tokio-test = "0.4"
wiremock = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6", features = ["linux-native"] }

[[bin]]
name = "hook0"
path = "src/main.rs"
