[package]
name = "hook0-cli"
version = "1.0.1"
edition = "2024"
license = "SSPL-1.0"
description = "CLI for Hook0 webhooks platform"
authors = ["David Sferruzza <david@hook0.com>", "François-Guillaume Ribreau <fg@hook0.com>"]
repository = "https://gitlab.com/hook0/hook0"
keywords = ["webhooks", "cli", "hook0"]
categories = ["command-line-utilities", "web-programming"]
build = "build.rs"

[package.metadata.release]
release = true
publish = false

[build-dependencies]
heck = "0.5"
reqwest = { version = "0.13", features = ["blocking", "rustls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", optional = true }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.6"
comfy-table = "7.2"
console = "0.16"
crossterm = { version = "0.29", features = ["event-stream"], optional = true }
dialoguer = "0.12"
dirs = "6.0"
futures-util = "0.3"
indicatif = "0.18"
keyring-core = "1"
portpicker = { version = "0.1", optional = true }
rand = "0.10"
ratatui = { version = "0.30", optional = true }
reqwest = { version = "0.13", features = ["hickory-dns", "json", "query"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.53", features = ["full"] }
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.24", features = ["v4", "serde"] }

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm", "dep:axum", "dep:portpicker"]

[dev-dependencies]
assert_cmd = "2.2"
axum = { version = "0.8", features = ["macros"] }
clap-markdown = "0.1.5"
hook0-play = { path = "../play" }
portpicker = "0.1"
predicates = "3.1"
tempfile = "3.27"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = "1"

[[bin]]
name = "hook0"
path = "src/main.rs"
