[package]
name = "hook0-output-worker"
version = "0.3.0"
authors = ["David Sferruzza <david@hook0.com>", "François-Guillaume Ribreau <fg@hook0.com>"]
repository = "https://gitlab.com/hook0/hook0/-/tree/master/output-worker"
homepage = "https://www.hook0.com/"
description = "Worker for Hook0 Open-Source Webhooks as a service for SaaS"
edition = "2024"
license = "SSPL-1.0"
keywords = ["webhooks", "webhook", "webhook-server", "events", "saas"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive", "env", "cargo", "wrap_help"] }
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
hook0-protobuf = { path = "../protobuf" }
hook0-sentry-integration = { path = "../sentry-integration", version = "0.1.0" }
humantime = "2.3.0"
itertools = "0.14.0"
log = "0.4.27"
pulsar = { version = "6.4.1", default-features = false, features = ["tokio-rustls-runtime"] }
reqwest = { version = "0.12.23", default-features = false, features = ["charset", "http2", "macos-system-configuration", "hickory-dns", "json"] }
rustls = { version = "0.23.32", default-features = false, features = ["std", "tls12", "logging", "prefer-post-quantum", "ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "chrono", "json"] }
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
uuid = { version = "1.18.1", features = ["v4", "v7"] }

[features]
default = ["reqwest-rustls-tls-webpki-roots"]
reqwest-rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
reqwest-rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
