[package]
name = "hook0-output-worker"
version = "1.0.0-alpha.3"
authors = ["David Sferruzza <david@hook0.com>", "François-Guillaume Ribreau <fg@hook0.com>"]
repository = "https://gitlab.com/hook0/hook0/-/tree/master/output-worker"
homepage = "https://www.hook0.com/"
description = "Worker for Hook0 Open-Source Webhooks as a service for SaaS"
edition = "2024"
license = "SSPL-1.0"
keywords = ["webhooks", "webhook", "webhook-server", "events", "saas"]

[package.metadata.release]
release = true
publish = false

[dependencies]
anyhow = "1.0.102"
aws-sdk-s3 = { version = "1.128.0", features = ["behavior-version-latest"] }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive", "env", "cargo", "wrap_help"] }
futures = "0.3.32"
hex = "0.4.3"
hmac = "0.13.0"
hook0-protobuf = { path = "../protobuf" }
hook0-sentry-integration = { path = "../sentry-integration", version = "0.1.0" }
humantime = "2.3.0"
itertools = "0.14.0"
tracing = "0.1.44"
opentelemetry = { version = "0.31.0", default-features = false, features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = ["trace", "metrics", "http-proto", "zstd-http", "internal-logs", "reqwest-blocking-client", "reqwest-rustls-webpki-roots"] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = ["trace", "metrics", "rt-tokio"] }
pulsar = { version = "6.7.2", default-features = false, features = ["tokio-rustls-runtime"] }
reqwest = { version = "0.13.2", features = ["hickory-dns", "json"] }
rustls = { version = "0.23.37", default-features = false, features = ["std", "tls12", "logging", "prefer-post-quantum"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "macros", "uuid", "chrono", "json"] }
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time", "signal"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
uuid = { version = "1.23.0", features = ["v4", "v7"] }
