[package]
name = "hook0-play"
version = "0.1.0"
edition = "2021"
license = "SSPL-1.0"
description = "Hook0 Webhook Relay Server - webhook.site-like inspection + local tunneling"
authors = ["François-Guillaume Ribreau <fg@hook0.com>"]
repository = "https://gitlab.com/hook0/hook0"

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "util"] }

# Async Runtime
tokio = { version = "1.43", features = ["full"] }
futures-util = { version = "0.3", features = ["sink"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP types
http = "1.2"
http-body-util = "0.1"
bytes = "1.9"

# Base64 encoding for payloads
base64 = "0.22"

# UUID for tokens and IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Random token generation
rand = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# URL parsing
url = "2.5"

# Concurrent data structures
dashmap = "6.1"

# Reqwest for forwarding (when not using WebSocket)
reqwest = { version = "0.12", features = ["json"], default-features = false }

# Encryption (AES-256-GCM for optional webhook storage encryption)
aes-gcm = "0.10"

# Secure memory zeroing
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
# HTTP client for testing
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# WebSocket client for testing
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
# Testing utilities
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.8", features = ["full"] }
portpicker = "0.1"
