[package]
name = "hook0-play"
version = "0.1.0"
edition = "2021"
license = "SSPL-1.0"
description = "Hook0 Webhook Relay Server - webhook.site-like inspection + local tunneling"
authors = ["François-Guillaume Ribreau <fg@hook0.com>"]
repository = "https://gitlab.com/hook0/hook0"

[dependencies]
aes-gcm = "0.10"
axum = { version = "0.8", features = ["ws", "macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive", "env"] }
dashmap = "6.1"
futures-util = { version = "0.3", features = ["sink"] }
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.51", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
portpicker = "0.1"
reqwest = { version = "0.13", features = ["json", "hickory-dns"], default-features = false }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
