[package]
name = "hook0-protobuf"
version = "0.1.0"
edition = "2024"
description = "Protocol Buffers related structures for Hook0, Open-Source Webhooks as a service for SaaS"
homepage = "https://www.hook0.com/"
repository = "https://gitlab.com/hook0/hook0/-/tree/master/protobuf"
authors = ["David Sferruzza <david@hook0.com>", "François-Guillaume Ribreau <fg@hook0.com>"]
keywords = ["webhooks", "webhook", "webhook-server", "sentry", "saas"]
license = "SSPL-1.0"

[dependencies]
chrono = "0.4.45"
prost = "0.14.4"
prost-wkt = "0.7.1"
prost-wkt-types = "0.7.1"
pulsar = { version = "6.8.0", default-features = false }
serde = "1.0.228"
serde_json = "1.0.150"
thiserror = "2.0.18"
uuid = "1.23.5"

[build-dependencies]
prost-build = "0.14.4"
prost-wkt-build = "0.7.1"
