[package]
name = "hook0-sentry-integration"
version = "0.1.0"
description = "Sentry-related methods for Hook0 Open-Source Webhooks as a service for SaaS"
homepage = "https://www.hook0.com/"
repository = "https://gitlab.com/hook0/hook0/-/tree/master/sentry-integration"
authors = ["David Sferruzza <david@hook0.com>", "François-Guillaume Ribreau <fg@hook0.com>"]
keywords = ["webhooks", "webhook", "webhook-server", "sentry", "saas"]
edition = "2024"
license = "SSPL-1.0"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
sentry = { version = "0.46.2", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls", "tracing", "anyhow"] }
