[package]
name = "hook0-mcp"
version = "1.0.0"
edition = "2024"
description = "MCP Server for Hook0 Open-Source Webhooks as a Service"
authors = ["François-Guillaume Ribreau <fg@hook0.com>","David Sferruzza <david@hook0.com>"]
license = "MIT"
keywords = ["webhooks", "webhook", "mcp", "llm", "ai"]
homepage = "https://www.hook0.com/"
repository = "https://github.com/hook0/hook0"
readme = "README.md"

[[bin]]
name = "hook0-mcp"
path = "src/main.rs"

[dependencies]
# MCP SDK
rmcp = { version = "0.14", features = ["server", "transport-io", "macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for API calls
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL handling
url = "2.5"

# UUID
uuid = { version = "1.19", features = ["serde", "v4"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
# OpenAPI parsing
openapiv3 = "2.2"

# Serialization for metadata output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for fetching OpenAPI spec at build time
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-webpki-roots"] }

[dev-dependencies]
tokio-test = "0.4"
